<resources>
    <string name="app_name">Smart Task</string>
    <string name="title_deleteCategory">Delete Category</string>
    <string name="desc_deleteCategory">This category and All subset Todos will be deleted from your list.</string>
    <string name="title_deleteTodo">Delete Todo</string>
    <string name="desc_deleteTodo">This todo will be delete from your list.</string>
    <string name="action_no">No</string>
    <string name="title_priority">Priority</string>
    <string name="title_noDeadline">No Deadline</string>
    <string name="title_deadline">Deadline</string>
    <string name="title_noDescription">No Description</string>
    <string name="title_createTodoHint">What To Do?</string>
    <string name="title_description">Description</string>
    <string name="title_title">Title</string>
    <string name="title_categories">Categories</string>
    <string name="title_todoList">TodoList</string>
    <string name="action_add">Add</string>
    <string name="title_defaultCategory">Main</string>
    <string name="title_doneTodoList">Done Todos</string>
    <string name="title_categoryOptions">Category Options</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_done">Done</string>
    <string name="title_priority_high">High</string>
    <string name="title_priority_normal">Normal</string>
    <string name="title_priority_low">Low</string>
    <string name="msg_todoList">Add New Tasks To Boost Your Productivity 💪🏻</string>
    <string name="msg_doneTodoList">Tasks Are Waiting to be Done😱😱</string>
    <string name="msg_splash">Always Try To Deliver More.</string>
    <string name="title_daySymbol">Day</string>
    <string name="title_no_doneDate">Not Done</string>
    <string name="action_undo">Undo</string>
    <string name="title_deleted">Deleted</string>
    <string name="title_done">Done</string>
    <string name="title_todoOptions">Todo Options</string>
    <string name="title_overdue">Overdue</string>
    <string name="title_today">Today</string>
    <string name="title_tomorrow">Tomorrow</string>
    <string name="title_settings">Settings</string>
    <string name="title_waterfall_todo_insertion">Waterfall Todo Insertion</string>
    <string name="title_app_language">App Language</string>
    <string name="title_app_theme">App Theme</string>
    <string name="title_en" translatable="false">EN</string>
    <string name="title_fa" translatable="false">فا</string>
    <string name="pickColor">Pick Color</string>


    <string-array name="todoListOptions">
        <item>@string/action_delete</item>
        <item>@string/action_edit</item>
        <item>@string/action_done</item>
    </string-array>

    <string-array name="priorities">
        <item>@string/title_priority_high</item>
        <item>@string/title_priority_normal</item>
        <item>@string/title_priority_low</item>
    </string-array>

    <string-array name="category_menu">
        <item>@string/action_delete</item>
        <item>@string/action_edit</item>
    </string-array>


</resources>