<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <import type="ir.timurid.smarttask.utils.DateUtils" />
        <import type="ir.timurid.smarttask.utils.ColorUtils" />
        <import type="ir.timurid.smarttask.extra.BindingAdapters" />

        <variable
            name="parent"
            type="ir.timurid.smarttask.pages.TodoDetailFragment" />

        <variable
            name="viewModel"
            type="ir.timurid.smarttask.viewModel.TodoDetailVM" />

        <variable
            name="todo"
            type="ir.timurid.smarttask.model.Todo" />

        <variable
            name="prioritiesRes"
            type="String[]" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/dayNight_background"
        android:orientation="vertical"
        tools:context=".pages.TodoDetailFragment">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/backBtn"
                style="@style/MaterialImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{parent::onCloseBtn}"
                app:icon="@drawable/ic_back"
                app:iconTint="@android:color/darker_gray" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/editBtn"
                style="@style/MaterialImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()-> parent.editTodo(todo)}"
                app:icon="@drawable/ic_edit"
                app:iconTint="@android:color/darker_gray" />

            <Button
                android:id="@+id/deleteBtn"
                style="@style/MaterialImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()-> viewModel.deleteTodo()}"
                app:icon="@drawable/ic_delete"
                app:iconTint="@android:color/darker_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{todo.info.title}"
            android:textColor="@color/dayNight_primaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:text="This is The Title And it's long" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/leftInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            app:cardBackgroundColor="@color/dayNight_foreground"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/rightInfo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:drawablePadding="8dp"
                    android:text="@{todo.categoryTitle}"
                    android:textColor="@color/dayNight_primaryText"
                    app:compoundDrawableTintList="@{ColorUtils.getColorStateList(todo.categoryColor)}"
                    app:drawableStartCompat="@drawable/ic_category"
                    tools:text="@string/title_categories" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="32dp"
                    android:background="@color/dayNight_background" />

                <TextView
                    android:id="@+id/priorityTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="8dp"
                    android:text='@{@string/title_priority + " " + prioritiesRes[todo.info.priority]}'
                    android:textColor="@color/dayNight_primaryText"
                    tools:text="@string/title_priority" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/rightInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/dayNight_foreground"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/leftInfo"
            app:layout_constraintTop_toTopOf="@id/leftInfo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:drawablePadding="8dp"
                    android:text="@{DateUtils.dateToStr(todo.info.deadline) ?? @string/title_noDeadline}"
                    android:textColor="@color/dayNight_primaryText"
                    app:drawableStartCompat="@drawable/ic_deadline"
                    app:drawableTint="@color/colorPrimaryDark"
                    tools:text="@string/title_deadline" />


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="32dp"
                    android:background="@color/dayNight_background" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="8dp"
                    android:text="@{DateUtils.dateToStr(todo.info.doneDate) ?? @string/title_no_doneDate}"
                    android:textColor="@color/dayNight_primaryText"
                    app:drawableStartCompat="@drawable/ic_done"
                    app:drawableTint="@color/colorPrimaryDark"
                    tools:text="Done Date" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/descriptionCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/dayNight_foreground"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/leftInfo">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/descriptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_description"
                    android:drawablePadding="8dp"
                    android:text="@string/title_description"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{todo.info.description ?? @string/title_noDescription}"
                    android:textColor="@color/dayNight_primaryText" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>